# stac-catalog-builder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  conda-environment.yaml  dataset.mk  pyproject.toml
.github/workflows/: lint.yml  pytest.yml  python-package-conda.yml
configs-datasets/ANIN/CROP_MASK/: config-collection.json  workflow.ipynb
configs-datasets/ANIN/ERA5-Land-monthly-averaged-data-v2/: Makefile  config-collection.json  workflow.ipynb
configs-datasets/ANIN/GLASS_FAPAR_months_sd/: .gitignore  config-collection.json  workflow.py
configs-datasets/ANIN/VCI-MODIS_NDVI/: Makefile  config-collection.json  workflow.ipynb
configs-datasets/ANIN/reanalysis-era5-land_southafrica/: Makefile  config-collection.json
configs-datasets/CLMS/WAW/: .gitignore  config-collection.json  workflow.ipynb
configs-datasets/EUGW/topology/: config-collection-ALP10_LAEA.json  config-collection-CVX10_LAEA.json  config-collection-CVX30_LAEA.json  config-collection-TPI10_LAEA.json  config-collection-TPI30_LAEA.json  config-collection-TWI10_LAEA.json  config-collection-TWI30_LAEA.json  config-collection-WET10_LAEA.json  config-collection-WET30_LAEA.json  config-collection.json  sandbox.ipynb  workflow.py
configs-datasets/HRLVPP/: .gitignore  config-collection.json
configs-datasets/PEOPLE_EA/Landsat_three-annual_NDWI_v1/: .gitignore  Makefile  config-collection.json  workflow.ipynb
configs-datasets/PEOPLE_EA/PEOPLE_INCA_cfactor/: Makefile  config-collection.json
configs-datasets/Planet/4-bandPS2-Flanders/: .gitignore  workflow.py
configs-datasets/Planet/8-bandSuperDove-Flanders/: config-collection.json
configs-datasets/Planet/PlanetScope-Flanders/: config-collection.json  delete.py  publish.py  workflow.py
configs-datasets/PlanetScope/: .gitignore  config-collection.json  workflow.py
configs-datasets/PlanetScope/4-band_PS2/: config-collection.json
configs-datasets/PlanetScope/8-band_SuperDove/: config-collection.json  workflow.py
configs-datasets/WEED-multicog-inference/: config-collection.json  workflow.py
configs-datasets/agera5/: agera5.py  config-collection.json
configs-datasets/agera5_dekad/: agera5_dekad.py  config-collection.json
configs-datasets/agera5_dekad_terrascope/: agera5_dekad.py  config-collection.json
configs-datasets/agera5_monthly/: agera5_monthly.py  config-collection.json
configs-datasets/agera5_monthly_cdse/: agera5_monthly.py  config-collection.json  upload_stac_api.py
configs-datasets/agera5_monthly_cdse/STAC/: collection.json
configs-datasets/agera5_monthly_terrascope/: agera5_monthly.py  config-collection.json  upload_stac_api.py
configs-datasets/agera5_monthly_terrascope/STAC/: collection.json
configs-datasets/cci/: cci.py
configs-datasets/config-template/: .gitignore  Makefile  README.md  config-collection.json  workflow.ipynb  workflow.py
configs-datasets/evoland/land_cover_map/: build.py  land_cover_map.json
configs-datasets/evoland/sentinal2_features/: build.py  sentinel-2_annualfeatures.json
configs-datasets/evoland/spatial_features/: build.py  spatial_features.json
configs-datasets/lcfm/LCM-10/: config-collection.json  workflow.py
configs-datasets/lcfm/LCM-100/: config-collection.json  workflow.py
configs-datasets/lcfm/LCM-10_utm/: config-collection.json  workflow.py
configs-datasets/lcfm/LCM-10_v100/: config-collection.json  workflow.py
configs-datasets/lcfm/LOS-60/: config-collection.json  workflow.py
configs-datasets/lcfm/LSF-ANNUAL-GAMMA0/: config-collection.json  workflow.py
configs-datasets/lcfm/TCD-10/: config-collection.json  workflow.py
configs-datasets/lcfm/cloud-mask/: config-collection.json  workflow.py
configs-datasets/luisa/: config-collection.json  workflow.py
configs-datasets/luisa/c4_area/: config-collection.json  upload_stac_api.py  workflow.py
configs-datasets/luisa/esacci_agb/: config-collection.json  datacube_extension.json  upload_stac_api.py  workflow.py
configs-datasets/luisa/esacci_lc/: config-collection.json  datacube_extension.json  upload_stac_api.py  workflow.py
configs-datasets/luisa/hanpp_harv_crop/: config-collection.json  workflow.py
configs-datasets/luisa/hanpp_luc/: config-collection.json  workflow.py
configs-datasets/luisa/hanpp_luc_ug/: upload_stac_api.py
configs-datasets/luisa/npp_act/: config-collection.json  workflow.py
configs-datasets/luisa/npp_pot/: config-collection.json  workflow.py
configs-datasets/modis09GA/: config-collection.json  create_collection.py  modis09GA.py  modis09GA_upload.py  test_openeo.py
configs-datasets/vici/archive/: config.json  workflow.py
configs-datasets/weed/ecdc/: README  auxiliary-config-collection.json  build_stac.py  config.toml  delete_collection.py  ecdccollection.py  functions.py  (+2 more)
configs-datasets/worldcereal/: Makefile  config-collection.json  generate_worldcereal.py
configs-datasets/worldcereal-modis/: config-collection.json  workflow.py
configs-datasets/worldcover/: config-collection.json  worldcover.py
docker/: README.md  apt-install-dependencies.sh  debianpython.dockerfile  miniconda.dockerfile  miniforge.dockerfile
docs/: developer-guidelines.md  goals-and-user-stories.md  how-to-configure-new-dataset.md  how-to-run-stacbuilder-cli.md  how-to-run-stacbuilder.md  index.md  installation.md  workflow.md
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
stacbuilder/: __init__.py  __main__.py  async_utils.py  boundingbox.py  builder.py  collector.py  commandapi.py  commandapi_vpp.py  config.py  core.py  exceptions.py  item_pipeline.py  mapper.py  metadata.py  pathparsers.py  projections.py  stac_item_collector.py  terracatalog.py  timezoneformat.py  verify_openeo.py
stacbuilder/stacapi/: __init__.py  auth.py  config.py  endpoints.py  upload.py
tests/: conftest.py  test_bounding_box.py  test_boundingbox.py  test_builder.py  test_collector.py  test_commandapi.py  test_config.py  test_core.py  test_metadata.py  test_pathparser.py  test_projections.py  test_stacbuilder.py
tests/stacapi/: test_endpoints.py
(+768 files in other folders)
