[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# TODO: consider making the name lower case. Does PyPI make any difference based on casing?
name = "stac-catalog-builder"
authors = [
  { name="Johan Schreurs", email="johan.schreurs.ext@vito.be" },
  { name="Jeroen Dries", email="jeroen.dries@vito.be" },
  { name="Victor Verhaert", email="victor.verhaert@vito.be" },
]
description = """Tool to build a STAC collection from a directory of GeoTiff files
STAC: SpatioTemporal Asset Catalogs
See https://stacspec.org
"""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click==8.1.*",
  "dynaconf==3.2.*",
  "geopandas==0.14.*",
  "openeo==0.26.*",
  "psutil",
  "pyarrow==17.0.*",
  "pydantic==2.5.*",
  "pyproj==3.6.*",
  "pystac[validation]==1.8.*",
  "rasterio==1.4.*",
  "requests==2.31.*",
  "requests_auth==7.0.*",
  "requests-mock==1.11.*",
  "rio-stac==0.8.*",
  "shapely==2.0.*",
  "stac-validator==3.3.*",
  "stactools==0.5.*",
  "ipykernel",
  "jupyter",
  "pytest",
  "yarl==1.9.*",
  "universal_pathlib",
  "s3fs>=2025.3.2",
]
dynamic = ["version"]

[project.optional-dependencies]
hrvpp = [
  "terracatalogueclient==0.1.14",
]

[project.urls]
Homepage = "https://github.com/VitoTAP/stac-catalog-builder"
Documentation = "https://github.com/VitoTAP/stac-catalog-builder#readme"
Issues = "https://github.com/VitoTAP/stac-catalog-builder/issues"
Source = "https://github.com/VitoTAP/stac-catalog-builder"

[project.scripts]
stacbuilder = "stacbuilder.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["stacbuilder"]

[tool.hatch.build.targets.sdist]
only-include = [
  "/stacbuilder",
]

[tool.hatch.version]
path = "stacbuilder/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120

[tool.isort]
# Run isort in black-compatible mode (https://pycqa.github.io/isort/docs/configuration/black_compatibility.html)
profile = "black"

[tool.ruff]
line-length = 120

[tool.uv.sources]
terracatalogueclient = { index = "vito-atf" }

[[tool.uv.index]]
name = "vito-atf"
url = "https://artifactory.vgt.vito.be/artifactory/api/pypi/python-packages/simple"
explicit = true
