[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stac-catalog-builder"
authors = [
  { name="Johan Schreurs", email="johan.schreurs.ext@vito.be" },
  { name="Jeroen Dries", email="jeroen.dries@vito.be" },
  { name="Victor Verhaert", email="victor.verhaert@vito.be" },
]
description = """Tool to build a STAC collection from a directory of GeoTiff files
STAC: SpatioTemporal Asset Catalogs
See https://stacspec.org
"""
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click==8.1.*",
  "dynaconf==3.2.*",
  "fsspec[http,s3]==2025.3.2",
  "geopandas>=1.0",
  "numpy",
  "openeo>=0.36",
  "psutil",
  "pyarrow==18.1.*",
  "pydantic==2.5.*",
  "pyproj",
  "pystac[validation]==1.11.*",
  "rasterio==1.4.3",
  "requests==2.31.*",
  "requests_auth==7.0.*",
  "shapely==2.0.*",
  "yarl==1.9.*",
  "universal_pathlib",
  "ipykernel>=6.29.5",
  "rio-cogeo>=5.4.2",
]

[dependency-groups]
hrvpp = [
  "terracatalogueclient==0.1.14",
]
dev = [
    "hatch>=1.14.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pytest-xdist",
    "requests-mock>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/VitoTAP/stac-catalog-builder"
Documentation = "https://github.com/VitoTAP/stac-catalog-builder#readme"
Issues = "https://github.com/VitoTAP/stac-catalog-builder/issues"
Source = "https://github.com/VitoTAP/stac-catalog-builder"

[project.scripts]
stacbuilder = "stacbuilder.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["stacbuilder"]

[tool.hatch.build.targets.sdist]
only-include = [
  "/stacbuilder",
]

[tool.hatch.version]
path = "stacbuilder/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120

[tool.isort]
# Run isort in black-compatible mode (https://pycqa.github.io/isort/docs/configuration/black_compatibility.html)
profile = "black"

[tool.ruff]
line-length = 120

[tool.uv]
default-groups = []

[tool.uv.sources]
terracatalogueclient = { index = "vito-atf" }

[[tool.uv.index]]
name = "vito-atf"
url = "https://artifactory.vgt.vito.be/artifactory/api/pypi/python-packages-public/simple"
explicit = true
